--- a/Cấu trúc điều kiện 2/BAI_TAP/Cấu trúc điều kiện 2.10.html
+++ b/Cấu trúc điều kiện 2/BAI_TAP/Cấu trúc điều kiện 2.10.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Tính giá điện</title>
 </head>
 <body>
-$END$
+<script>
+  let a = +prompt("Mức tiêu thụ điện của bạn là(kWh):")
+  if (a<0){
+    alert("Hãy nhập mức tiêu thụ là số dương")
+  }else if (a<=50){
+    document.writeln("Mức tiêu thụ của bạn ở bậc 1 với giá tiền là: "+(a*1678))
+  }else if (a<=100){
+    document.writeln("Mức tiêu thụ của bạn ở bậc 2 với giá tiền là: "+(a*1734))
+  }else if (a<=200){
+    document.writeln("Mức tiêu thụ của bạn ở bậc 3 với giá tiền là: "+(a*2014))
+  }else if (a<=300){
+    document.writeln("Mức tiêu thụ của bạn ở bậc 4 với giá tiền là: "+(a*2536 ))
+  }else if (a<=400){
+    document.writeln("Mức tiêu thụ của bạn ở bậc 5 với giá tiền là: "+(a*2834))
+  }else if (a>400){
+    document.writeln("Mức tiêu thụ của bạn ở bậc 6 với giá tiền là: "+(a*2927))
+  }
+</script>
 </body>
 </html>
