--- a/Cấu trúc điều kiện 2/BAI_TAP/Cấu trúc điều kiện 2.4.html
+++ b/Cấu trúc điều kiện 2/BAI_TAP/Cấu trúc điều kiện 2.4.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Tính diện tích hình  chữ nhật khi biết 02 cạnh a, b.</title>
 </head>
 <body>
-$END$
+<script>
+  let a = +prompt("Chiều dài hình chữ nhật: ");
+  let b = +prompt("Chiều rộng hình chữ nhật: ");
+  let s = a*b;
+  if (a<=0){
+    alert("Độ dài cạnh phải là số dương")
+  }else if (b<=0){
+    alert("Độ dài cạnh phải là số dương")
+  }else {
+    document.write("Diện tích hình vuông là: "+s)
+  }
+</script>
 </body>
 </html>
