--- a/Biến, kiểu dữ liệu và toán tử/BAI_TAP/Money.html
+++ b/Biến, kiểu dữ liệu và toán tử/BAI_TAP/Money.html
@@ -16,7 +16,7 @@
   </tr>
   <tr>
     <td>
-      <input type="text" name="abc" id="inputNumber">
+      <input type="text" name="abc" id="inputnumber">
     <td style="width: 50px"></td>
 
     </td>
@@ -43,7 +43,7 @@
 <p id="result" style="color: blue"></p>
 <script>
   function change() {
-    let Money = document.getElementById("inputNumber").value;
+    let Money = document.getElementById("inputnumber").value;
     let firstmoney = document.getElementById("firstmoney").value;
     let secondmoney = document.getElementById("secondmoney").value;
     let result;
