--- a/Cấu trúc điều kiện 2/BAI_TAP/Câu lệnh điều kiện 2.6.html
+++ b/Cấu trúc điều kiện 2/BAI_TAP/Câu lệnh điều kiện 2.6.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Giải phương trình bậc 1.</title>
 </head>
 <body>
-$END$
+<script>
+  alert("Phương trình hệ số 1 có dạng:aX+b=0")
+  let a = +prompt("Nhập hệ số a")
+  let b = +prompt("Nhập hệ số b")
+  let x = (-b)/a
+  if (a<=0){
+    document.write("Phương trình vô nghiệm, hãy nhập hệ số a khác 0")
+  }else {
+    document.write("Nghiệm của phương trình là: "+x)
+  }
+</script>
 </body>
 </html>
