--- a/Cấu trúc điều kiện 2/BAI_TAP/Câu lệnh điều kiện 2.7.html
+++ b/Cấu trúc điều kiện 2/BAI_TAP/Câu lệnh điều kiện 2.7.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Giải phương trình bậc 2.</title>
 </head>
 <body>
-$END$
+<script>
+  alert("Phương trình bậc 2 có dạng:aX^2+bX+c=0")
+  let a = +prompt("Nhập hệ số a: ")
+  let b = +prompt("Nhập hệ số b: ")
+  let c = +prompt("Nhập hệ số c: ")
+  let delta = b*b -4*a*c
+  let x1
+  let x2
+  if (delta<0){
+    document.write("Phương trình vô nghiệm")
+  }else if (delta == 0){
+    document.write("Nghiệm của phương trình là: "+ ((-b)/2*a))
+  } else {
+    document.writeln("Phương trình có 2 nghiệm:x1 = "+((-b + Math.sqrt(delta))/2*a))
+    document.write(", x2 = "+((-b - Math.sqrt(delta))/2*a))
+  }
+</script>
 </body>
 </html>
