--- a/Cấu trúc điều kiện 2/BAI_TAP/Cấu trúc điều kiện 2.5.html
+++ b/Cấu trúc điều kiện 2/BAI_TAP/Cấu trúc điều kiện 2.5.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Tính diện tích tam giác vuông khi biết 02 cạnh kề a, b.</title>
 </head>
 <body>
-$END$
+<script>
+  let a = +prompt("Độ dài cạnh góc vuông thứ 1:");
+  let b = +prompt("Độ dài cạnh góc vuông thứ 2:");
+  let s = (a*b)/2;
+  document.write("Diện tích hình tam giác là: "+s)
+</script>
 </body>
 </html>
