--- a/Cấu trúc điều kiện 2/BAI_TAP/Cấu trúc điều kiện 2.8.html
+++ b/Cấu trúc điều kiện 2/BAI_TAP/Cấu trúc điều kiện 2.8.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Kiểm tra tuổi</title>
 </head>
 <body>
-$END$
+<script>
+  let a = +prompt("Nhập tuổi cần kiểm tra")
+  if (a<120 && a>0){
+      alert("Đây là tuổi của 1 người là: "+a)
+  }else {
+      alert("Đây là tuổi của yêu quái")
+  }
+</script>
 </body>
 </html>
