--- a/Cấu trúc lặp 2/BAI_TAP/Hình chữ nhật.html
+++ b/Cấu trúc lặp 2/BAI_TAP/Hình chữ nhật.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Hình chữ nhật</title>
 </head>
 <body>
-$END$
+<script>
+  for (let i=1;i<=5;i++){
+    for (let j=1;j<=10;j++){
+        if (i==1 || j==1||i==5||j==10){
+            document.writeln("*")
+
+        }else {
+            document.writeln(" ")
+
+
+        }
+    }
+  }
+</script>
 </body>
 </html>
