--- a/Cấu trúc lặp 2/BAI_TAP/4 hình tam giác.html
+++ b/Cấu trúc lặp 2/BAI_TAP/4 hình tam giác.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>4 hình tam giác</title>
 </head>
 <body>
-$END$
+<script>
+  for (let i=0;i<5;i++){
+    //Hàng
+    for (let j=0;j<=i;j++){
+      document.writeln("*")
+    }document.writeln("<br/>")
+  }
+</script>
+<br>
+<script>
+  for (let i=5;i>0;i--){
+    //Hàng
+    for (let j=0;j<i;j++){
+      //Cột
+      document.writeln("*")
+    }document.writeln("<br/>")
+  }
+</script>
+<br>
+<script>
+  for (let i = 1; i <= 5; i++) {
+    for (let j = 5-i; j >0; j--) {
+      document.writeln("&nbsp&nbsp;")
+    }
+    for(let m = 1;m<=i;m++){
+      document.write("* ")
+    }   document.write("<br/>")
+  }   document.write("<br/>")
+</script>
+<script>
+  for ( i = 0; i < 5; i++) {
+    for(let n = 1;n<=i;n++){
+      document.writeln("&nbsp&nbsp;");
+    }
+    for (let j = 5-i; j >0; j--) {
+      document.write("* ");
+    }
+    document.write("<br/>");
+  }
+
+</script>
 </body>
 </html>
