--- a/Cấu trúc lặp 2/BAI_TAP/Số nguyên tố.html
+++ b/Cấu trúc lặp 2/BAI_TAP/Số nguyên tố.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Số nguyên tố đầu tiên</title>
 </head>
 <body>
-$END$
+<script>
+  let a = +prompt("Số số nguyên tố bạn cần suất ra: ")
+  let count = 0
+  let n =2
+ for (count;count<a;count++){
+
+ }
+</script>
 </body>
 </html>
