--- a/Mảng/BAI_TAP/Từ điển.html
+++ b/Mảng/BAI_TAP/Từ điển.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Từ điển</title>
 </head>
 <body>
-$END$
+<table>
+  <tr>
+    <th>
+      Tiếng Anh
+    </th>
+    <td style="width: 50px"></td>
+  </tr>
+  <tr>
+    <td>
+      <input type="text" name="abc" id="tienganh">
+    <td style="width: 50px"></td><td>
+  <td>
+    <input type="button" value="Tra" onclick="change()">
+  </td>
+</table>
+<p id="result" style="color: #010105"></p>
+<script>
+  function change(){
+    let arr = ["Book","Pen","Car","Happy"]
+  }
+</script>
 </body>
 </html>
