--- a/Cấu trúc điều kiện 2/BAI_TAP/Cấu trúc điều kiện 2.12.html
+++ b/Cấu trúc điều kiện 2/BAI_TAP/Cấu trúc điều kiện 2.12.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-
+<script>
+    let x = 1;
+    for (let i = 0; i < -1; i = i + 2) {
+        x = x + 1;
+    }
+   alert(x);
+</script>
 </body>
 </html>
