--- a/Mảng/BAI_TAP/Sử dụng các hàm có sẵn của mảng.1.html
+++ b/Mảng/BAI_TAP/Sử dụng các hàm có sẵn của mảng.1.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Nối 2 mảng</title>
 </head>
 <body>
-$END$
+<script>
+  let myColor = ["Red", "Green","White","Black"]
+  document.writeln(myColor.join(','))
+
+</script>
 </body>
 </html>
