--- a/Mảng/BAI_TAP/Sử dụng các hàm có sẵn của mảng.2.html
+++ b/Mảng/BAI_TAP/Sử dụng các hàm có sẵn của mảng.2.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Thêm dấu -</title>
 </head>
 <body>
-$END$
+<script>
+  let number = +prompt()
+  let str = number.toString()
+  let result = [str[0]]
+  for (let x=1;x<str.length;x++){
+      if ((str[x-1])%2===0 && (str[x]%2===0)){
+          result.push('-',str[x])
+
+      }else {
+          result.push(str[x])
+      }
+  }
+  document.writeln(result.join(''))
+</script>
 </body>
 </html>
