--- a/Biến, kiểu dữ liệu và toán tử/BAI_TAP/Money.html
+++ b/Biến, kiểu dữ liệu và toán tử/BAI_TAP/Money.html
@@ -52,7 +52,7 @@
       result = Money
     }
     else if ( firstmoney == "VietNam" && secondmoney == "USD")
-    {result = Money * 0.000042399932 + "$"}
+    result = Money * 0.000042399932 + "$"
     else{
       result = Money * 23580 + "VND"
     }
